--- a/views/host/gameView.ejs
+++ b/views/host/gameView.ejs
@@ -29,16 +29,7 @@
               </div>
             </div>
             <div class="row question">
-                <h1 class="h1" style="color:#000;" id="top1"></h1> 
-            </div>
-            <div class="row question">
-                <h1 class="h1" style="color:#000;" id="top2"></h1> 
-            </div>
-            <div class="row question">
-                <h1 class="h1" style="color:#000;" id="top3"></h1> 
-            </div>
-            <div class="row question">
-                <h1 class="h1" style="color:#000;" id="top4"></h1> 
+                <h1 class="h1" style="color:#000;" id="question"></h1> 
             </div>
             <div class="fixed-bottom" style="margin: 20px;">
                 <div class="row">
@@ -61,36 +52,31 @@
             <br>
         </div>
 
-        <div id="result">
+        <div id="result" style="display:None;">
             <div class="pos-f-t">
               <nav class="navbar navbar-dark bg-dark">
                 <div class="col-md-12 text-center">
-                <h1 class="h1" style="color:#fff;" id="questionNumber"></h1> 
+                <h1 class="h1" style="color:#fff;"> Top Player</h1> 
                 </div>
               </nav>
             </div>
             <div class="row question">
-                <h1 class="h1" style="color:#000;" id="question"></h1> 
+                <h1 class="h1" style="color:#000;" id="top1"></h1> 
+                <span id="score1"></span>
             </div>
-            <div class="fixed-bottom" style="margin: 20px;">
-                <div class="row">
-                    <div class="col-md-6 text-center" style="height:5em;padding: 4px;">
-                        <button id="A" name="singlebutton" class="btn btn-primary answer answer-A">A</button> 
-                    </div>
-                    <div class="col-md-6 text-center" style="height:5em;padding: 4px;">
-                        <button id="B" name="singlebutton" class="btn btn-primary answer answer-B">B</button> 
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-md-6 text-center" style="height:5em;padding: 4px;">
-                        <button id="C" name="singlebutton" class="btn btn-primary answer answer-C">C</button> 
-                    </div>
-                    <div class="col-md-6 text-center" style="height:5em;padding: 4px;">
-                        <button id="D" name="singlebutton" class="btn btn-primary answer answer-D">D</button> 
-                    </div>
-                </div>
+            <div class="row question">
+                <h1 class="h1" style="color:#000;" id="top2"></h1> 
+                <span id="score2"></span>
             </div>
-            <br>
+            <div class="row question">
+                <h1 class="h1" style="color:#000;" id="top3"></h1> 
+                <span id="score3"></span>
+            </div>
+            <div class="row question">
+                <h1 class="h1" style="color:#000;" id="top4"></h1> 
+                <span id="score4"></span>
+            </div>
+            <button id="next" name="singlebutton" class="btn btn-primary" onclick="requestQuestion()">NEXT</
         </div>
 
 
@@ -124,12 +110,23 @@
             });
         }
 
+        function requestAnswerAndTopScore()
+        {
+            socket.emit('host',{
+                state: 2,
+                roomID:roomID,
+                questionsPackId:questionsPackId,
+                questionNumber:questionNumber.toString()
+            });
+        }
+
         socket.on('host',function(data){ 
-            console.log('[INFO] Receive a socket');
+            console.log('[INFO] Receive a socket. State',data.state);
+            console.log('[INFO] Data: ', data)
             var state =data.state; 
-            console.log('[DEBUG] data = ', data);
             if(state==1){
                 $("#playing").show();
+                $("#result").hide();
                 //reset progress bar
                 $("#progressBar").css('width','0%');
                 // $("#numPlayers").html(Object.keys(JSON.parse(data)).length.toString()+' players');
@@ -144,19 +141,36 @@
                 var p = setInterval(function(){
                     var percentage=currentTime/limit*100;
                     currentTime = currentTime + 1;
-                    console.log(percentage);
                     if(percentage<=100){
                         $("#progressBar").css('width',percentage.toString()+'%');
                     }
                 }, 1000);
                 setTimeout(function(){
                     clearInterval(p);
-                    requestQuestion();
+                    requestAnswerAndTopScore();
+                    console.log('[] requestAnswerAndTopScore');
                 }, 1000*(limit+2));
-            }else if(state==2){
-                
-            }else if(state==3){
-                // endgame
+            }else if(state==2 || state == 3){
+
+                $("#result").show();
+                $("#playing").hide();
+
+                $("#top1").html(data.top[0][0]);
+                $("#top2").html(data.top[1][0]);
+                $("#top3").html(data.top[2][0]);
+                $("#top4").html(data.top[3][0]);
+
+                $("#score1").html(data.top[0][1]);
+                $("#score2").html(data.top[1][1]);
+                $("#score3").html(data.top[2][1]);
+                $("#score4").html(data.top[3][1]);
+
+                if(state==3){
+                    $("#next").html('BACK TO HOME');
+                    $( "#next" ).click(function() {
+                       window.location.href='/';
+                    });
+                }
             }
         });
 
