--- a/views/host/gameView.ejs
+++ b/views/host/gameView.ejs
@@ -56,27 +56,58 @@
             <div class="pos-f-t">
               <nav class="navbar navbar-dark bg-dark">
                 <div class="col-md-12 text-center">
-                <h1 class="h1" style="color:#fff;"> Top Player</h1> 
+                <h1 class="h1" style="color:#fff;"> Score</h1> 
                 </div>
               </nav>
             </div>
-            <div class="row question">
-                <h1 class="h1" style="color:#000;" id="top1"></h1> 
+            <div>
+                <span id="top1"></span>
                 <span id="score1"></span>
             </div>
-            <div class="row question">
-                <h1 class="h1" style="color:#000;" id="top2"></h1> 
+            <div>
+                <span id="top2"></span>
                 <span id="score2"></span>
             </div>
-            <div class="row question">
-                <h1 class="h1" style="color:#000;" id="top3"></h1> 
+            <div>
+                <span id="top3"></span>
                 <span id="score3"></span>
             </div>
-            <div class="row question">
-                <h1 class="h1" style="color:#000;" id="top4"></h1> 
+            <div>
+                <span id="top4"></span>
                 <span id="score4"></span>
             </div>
-            <button id="next" name="singlebutton" class="btn btn-primary" onclick="requestQuestion()">NEXT</
+            <div class="progress">
+              <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 10%" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100"></div>
+            </div>
+            <div class="progress">
+              <div class="progress-bar progress-bar-striped bg-success" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+            </div>
+            <div class="progress">
+              <div class="progress-bar progress-bar-striped bg-info" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
+            </div>
+            <div class="progress">
+              <div class="progress-bar progress-bar-striped bg-warning" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+            </div>
+            <div class="progress">
+              <div class="progress-bar progress-bar-striped bg-danger" role="progressbar" style="width: 100%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
+            </div>
+            <div>
+                <span>A:</span>
+                <span id="countAnswersA"></span>
+            </div>
+            <div>
+                <span>B:</span>
+                <span id="countAnswersB"></span>
+            </div>
+            <div>
+                <span>C:</span>
+                <span id="countAnswersC"></span>
+            </div>
+            <div>
+                <span>D:</span>
+                <span id="countAnswersD"></span>
+            </div>
+            <button id="next" name="singlebutton" class="btn btn-primary">NEXT</button>
         </div>
 
 
@@ -92,12 +123,16 @@
 
     <script>
 
-        var url = 'http://' + window.location.hostname+':3000';
-        console.log('[INFO] url = ',url);
+        // ...........................
+        // validate author, not yet
+        // ............................
+
         var socket = io.connect();
         const roomID = "<%= roomID%>";
         var questionNumber = 0;
         var questionsPackId = '001';
+
+        $( "#next" ).click(requestQuestion);
 
         function requestQuestion()
         {
@@ -123,61 +158,60 @@
         socket.on('host',function(data){ 
             console.log('[INFO] Receive a socket. State',data.state);
             console.log('[INFO] Data: ', data)
-            var state =data.state; 
-            if(state==1){
-                $("#playing").show();
-                $("#result").hide();
-                //reset progress bar
-                $("#progressBar").css('width','0%');
-                // $("#numPlayers").html(Object.keys(JSON.parse(data)).length.toString()+' players');
-                $("#A").html(data.a);
-                $("#B").html(data.b);
-                $("#C").html(data.c);
-                $("#D").html(data.d);
-                $("#questionNumber").html("Question " + questionNumber.toString());
-                $("#question").html(data.question);
-                limit = data.limit;
-                currentTime=0;
-                var p = setInterval(function(){
-                    var percentage=currentTime/limit*100;
-                    currentTime = currentTime + 1;
-                    if(percentage<=100){
-                        $("#progressBar").css('width',percentage.toString()+'%');
+            var state =data.state;
+
+            if(roomID == data.roomID){
+                if(state==1){
+                    $("#playing").show();
+                    $("#result").hide();
+                    //reset progress bar
+                    $("#progressBar").css('width','0%');
+                    // $("#numPlayers").html(Object.keys(JSON.parse(data)).length.toString()+' players');
+                    $("#A").html(data.a);
+                    $("#B").html(data.b);
+                    $("#C").html(data.c);
+                    $("#D").html(data.d);
+                    $("#questionNumber").html("Question " + questionNumber.toString());
+                    $("#question").html(data.question);
+                    limit = data.limit;
+                    currentTime=0;
+                    var p = setInterval(function(){
+                        var percentage=currentTime/limit*100;
+                        currentTime = currentTime + 1;
+                        if(percentage<=100){
+                            $("#progressBar").css('width',percentage.toString()+'%');
+                        }
+                    }, 1000);
+                    setTimeout(function(){
+                        clearInterval(p);
+                        requestAnswerAndTopScore();
+                        console.log('[] requestAnswerAndTopScore');
+                    }, 1000*(limit+2));
+                }else if(state==2 || state == 3){
+
+                    $("#result").show();
+                    $("#playing").hide();
+
+                    for(let i=0; i<data.top.length; i++){
+                        $("#top"+(i+1).toString()).html(data.top[i][0]);
+                        $("#score"+(i+1).toString()).html(data.top[i][1]);
                     }
-                }, 1000);
-                setTimeout(function(){
-                    clearInterval(p);
-                    requestAnswerAndTopScore();
-                    console.log('[] requestAnswerAndTopScore');
-                }, 1000*(limit+2));
-            }else if(state==2 || state == 3){
 
-                $("#result").show();
-                $("#playing").hide();
+                    $("#countAnswersA").html(data.countAnswers.a);
+                    $("#countAnswersB").html(data.countAnswers.b);
+                    $("#countAnswersC").html(data.countAnswers.c);
+                    $("#countAnswersD").html(data.countAnswers.d);
 
-                $("#top1").html(data.top[0][0]);
-                $("#top2").html(data.top[1][0]);
-                $("#top3").html(data.top[2][0]);
-                $("#top4").html(data.top[3][0]);
-
-                $("#score1").html(data.top[0][1]);
-                $("#score2").html(data.top[1][1]);
-                $("#score3").html(data.top[2][1]);
-                $("#score4").html(data.top[3][1]);
-
-                if(state==3){
-                    $("#next").html('BACK TO HOME');
-                    $( "#next" ).click(function() {
-                       window.location.href='/';
-                    });
+                    if(state==3){
+                        $("#next").html('BACK TO HOME');
+                        $( "#next" ).click(function() {
+                           window.location.href='/';
+                        });
+                    }
                 }
-            }
+            } 
+            
         });
-
-        function displayQuestion() {
-
-        }
-
 
         // Running first mode
         requestQuestion();
