--- a/views/player/gameView.ejs
+++ b/views/player/gameView.ejs
@@ -12,12 +12,58 @@
 
     </head>
     <body>
-        <div class="waiting">
+        <div id="init">
             <h1 id="title1">You are in!</h1>
             <h3 id="title2">Waiting for host</h3>
             <div class="loader"></div>
-            <br/>
         </div>
+
+        <div id="playing"  style="display:None;">
+            <div class="pos-f-t">
+              <nav class="navbar navbar-dark bg-dark">
+                <div class="col-md-12 text-center">
+                <h1 class="h1" style="color:#fff;" id="questionNumber"></h1> 
+                </div>
+              </nav>
+            </div>
+            <div class="fixed-bottom" style="margin: 20px;">
+                <div class="row">
+                    <div class="col-md-6 text-center" style="height:5em;padding: 4px;">
+                        <button id="A" name="singlebutton" class="btn btn-primary">A</button> 
+                    </div>
+                    <div class="col-md-6 text-center" style="height:5em;padding: 4px;">
+                        <button id="B" name="singlebutton" class="btn btn-primary">B</button> 
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-6 text-center" style="height:5em;padding: 4px;">
+                        <button id="C" name="singlebutton" class="btn btn-primary">C</button> 
+                    </div>
+                    <div class="col-md-6 text-center" style="height:5em;padding: 4px;">
+                        <button id="D" name="singlebutton" class="btn btn-primary">D</button> 
+                    </div>
+                </div>
+            </div>
+            <br>
+        </div>
+
+        <div id="waiting" style="display: None;">
+            <h1 id="title1">You answered!</h1>
+            <h3 id="title2">Waiting for other players</h3>
+            <div class="loader"></div>
+        </div>
+        
+        <div id="result" style="display:None;">
+            <h1 id="answerStatus"></h1>
+            <h3 id="points"></h3>
+            <h3 id="rank"></h3>
+        </div>
+        
+        <div id="endgame" style="display:None;">
+            <h1>End Game!</h1>
+            <button id="back" name="singlebutton" class="btn btn-primary">BACK TO HOME</button>
+        </div>
+        
 
     <!-- Bootstrap JS -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
@@ -27,25 +73,125 @@
     <script src="https://www.gstatic.com/firebasejs/5.9.3/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/5.9.3/firebase-auth.js"></script>
 
-    <!-- <script>
-        var $jq = jQuery.noConflict();
-        setInterval(function() {
-            $jq.ajax({
-                type: 'GET',
-                url: '/test',
-                dataType: 'text',
-                success: function(data) {
-                    var roomJSON = $jq.parseJSON(data);
-                    $jq("#timer").text(roomJSON.room.timer);
-                },
-                error: function(xhr, ajaxOptions, thrownError) {
-                    // alert(xhr.status);
-                    // alert(thrownError);
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/1.7.3/socket.io.js"></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/js-cookie@2/src/js.cookie.min.js"></script>
+
+    <script>
+        // ...........................
+        // validate author, not yet
+        // ............................
+
+        const player = Cookies.get('player');
+        const roomID = Cookies.get('roomID');
+
+        var socket = io.connect();
+        var questionNumber = 0;
+
+        $("#A" ).click(answerQuestionA);
+        $("#B" ).click(answerQuestionB);
+        $("#C" ).click(answerQuestionC);
+        $("#D" ).click(answerQuestionD);
+
+        function playerCheckIn()
+        {
+            socket.emit('playerCheckIn',{
+                player:player,
+                roomID:roomID,
+            });
+        }
+
+        function switchToWaiting(){
+            $("#playing").hide();
+            $("#waiting").show();
+        }
+
+        function answerQuestionA()
+        {
+            switchToWaiting();
+            socket.emit('player',{
+                state: 1,
+                roomID:roomID,
+                player: player,
+                questionNumber:questionNumber.toString(),
+                answer:'a'
+            });
+        }
+
+        function answerQuestionB()
+        {
+            switchToWaiting();
+            socket.emit('player',{
+                state: 1,
+                roomID:roomID,
+                player: player,
+                questionNumber:questionNumber.toString(),
+                answer:'b'
+            });
+        }
+
+        function answerQuestionC()
+        {
+            switchToWaiting();
+            socket.emit('player',{
+                state: 1,
+                roomID:roomID,
+                player: player,
+                questionNumber:questionNumber.toString(),
+                answer:'c'
+            });
+        }
+
+        function answerQuestionD()
+        {
+            switchToWaiting();
+            socket.emit('player',{
+                state: 1,
+                roomID:roomID,
+                player: player,
+                questionNumber:questionNumber.toString(),
+                answer:'d'
+            });
+        }
+
+        socket.on('player',function(data){ 
+            console.log('[INFO] Receive a socket. State',data.state);
+            console.log('[INFO] Data: ', data)
+            var state =data.state; 
+
+            if(roomID == data.roomID){
+                if(state==1){
+                    $("#init").hide();
+                    $("#playing").show();
+                    $("#waiting").hide();
+                    $("#result").hide();
+                    questionNumber = data.questionNumber;
+                    $("#questionNumber").html("Question "+questionNumber);
+                }else if(state==2 || state == 3){
+
+                    $("#result").show();
+                    $("#playing").hide();
+                    $("#waiting").hide();
+
+                    $("#answerStatus").html(data.players[player].answerStatus);
+                    $("#points").html("+" + data.players[player].points + " points");
+                    $("#rank").html("Your rank is " + data.players[player].rank);
+
+                    if(state==3){
+                        $("#back").click(function() {
+                           window.location.href='/';
+                        });
+                        $("#endgame").show();
+                    }
                 }
-            }) // End of AJAX
-        }, 1000);
-    
-    </script> -->
+            }
+            
+        });
+
+        // Running first mode
+        playerCheckIn();
+
+    </script>
 
     </body>
 </html>
