--- a/views/host/gameView.ejs
+++ b/views/host/gameView.ejs
@@ -60,38 +60,66 @@
                 </div>
               </nav>
             </div>
-            <div>
-                <span id="top1"></span>
-                <span id="score1"></span>
+            <div class="top-scoreboard">
+                <div class="row">
+                    <div class="col-sm-6">
+                        <span id="top1" class="nameTop"></span>
+                    </div>
+                    <div class="col-sm-6">
+                        <span id="score1" class="scoreTop"></span>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-sm-6">
+                        <span id="top2" class="nameTop"></span>
+                    </div>
+                    <div class="col-sm-6">
+                        <span id="score2" class="scoreTop"></span>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-sm-6">
+                        <span id="top3" class="nameTop"></span>
+                    </div>
+                    <div class="col-sm-6">
+                        <span id="score3" class="scoreTop"></span>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-sm-6">
+                        <span id="top4" class="nameTop"></span>
+                    </div>
+                    <div class="col-sm-6">
+                        <span id="score4" class="scoreTop"></span>
+                    </div>
+                </div>
             </div>
-            <div>
-                <span id="top2"></span>
-                <span id="score2"></span>
+            <div class="answers-result">
+                <%# <div class="progress answers-bar-bg">
+                <div class="progress-bar progress-bar-striped progress-bar-score" role="progressbar" style="width: 10%" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100"></div>
+                </div> %>
+                <div class="progress answers-bar-bg">
+                <div class="progress-bar progress-bar-striped bg-success progress-bar-score" id="countA" role="progressbar" style="width: 1%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">
+                    
+                </div><span id="countAnswersA" class="count-text"></span>
+                </div>
+                <div class="progress answers-bar-bg">
+                <div class="progress-bar progress-bar-striped bg-info progress-bar-score" id="countB" role="progressbar" style="width: 1%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
+                    
+                </div><span id="countAnswersB" class="count-text"></span>
+                </div>
+                <div class="progress answers-bar-bg">
+                <div class="progress-bar progress-bar-striped bg-warning progress-bar-score" id="countC" role="progressbar" style="width: 1%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">
+                    
+                </div><span id="countAnswersC" class="count-text"></span>
+                </div>
+                <div class="progress answers-bar-bg">
+                <div class="progress-bar progress-bar-striped bg-danger progress-bar-score" id="countD" role="progressbar" style="width: 1%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
+                    
+                </div><span id="countAnswersD" class="count-text"></span>
+                </div>
             </div>
-            <div>
-                <span id="top3"></span>
-                <span id="score3"></span>
-            </div>
-            <div>
-                <span id="top4"></span>
-                <span id="score4"></span>
-            </div>
-            <div class="progress">
-              <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 10%" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100"></div>
-            </div>
-            <div class="progress">
-              <div class="progress-bar progress-bar-striped bg-success" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
-            </div>
-            <div class="progress">
-              <div class="progress-bar progress-bar-striped bg-info" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
-            </div>
-            <div class="progress">
-              <div class="progress-bar progress-bar-striped bg-warning" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
-            </div>
-            <div class="progress">
-              <div class="progress-bar progress-bar-striped bg-danger" role="progressbar" style="width: 100%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
-            </div>
-            <div>
+            <%# <div>
                 <span>A:</span>
                 <span id="countAnswersA"></span>
             </div>
@@ -106,8 +134,12 @@
             <div>
                 <span>D:</span>
                 <span id="countAnswersD"></span>
+            </div> %>
+            <div class="row center">
+                <div class="col-sm-12">
+                    <button id="next" name="singlebutton" class="btn btn-primary">NEXT</button>
+                </div>
             </div>
-            <button id="next" name="singlebutton" class="btn btn-primary">NEXT</button>
         </div>
 
 
@@ -153,6 +185,7 @@
                 questionsPackId:questionsPackId,
                 questionNumber:questionNumber.toString()
             });
+
         }
 
         socket.on('host',function(data){ 
@@ -197,10 +230,23 @@
                         $("#score"+(i+1).toString()).html(data.top[i][1]);
                     }
 
-                    $("#countAnswersA").html(data.countAnswers.a);
-                    $("#countAnswersB").html(data.countAnswers.b);
-                    $("#countAnswersC").html(data.countAnswers.c);
-                    $("#countAnswersD").html(data.countAnswers.d);
+                    var countA = data.countAnswers.a;
+                    var countB = data.countAnswers.b;
+                    var countC = data.countAnswers.c;
+                    var countD = data.countAnswers.d;
+
+                    var Total = countA + countB + countC + countD + 1;
+
+                    $("#countAnswersA").html(countA);
+                    $("#countAnswersB").html(countB);
+                    $("#countAnswersC").html(countC);
+                    $("#countAnswersD").html(countD);
+
+                    $("#countA").css('width',(countA / Total * 100 + 1).toString()+'%');
+                    $("#countB").css('width',(countB / Total * 100 + 1).toString()+'%');
+                    $("#countC").css('width',(countC / Total * 100 + 1).toString()+'%');
+                    $("#countD").css('width',(countD / Total * 100 + 1).toString()+'%');
+
 
                     if(state==3){
                         $("#next").html('BACK TO HOME');
