--- a/views/login.ejs
+++ b/views/login.ejs
@@ -68,7 +68,14 @@
             messagingSenderId: "550416420066"
         };
         firebase.initializeApp(config);
-
+        var lobbyID = '<%= lobbyID %>';
+        var rurl;
+        if (lobbyID == 'create') {
+            rurl = '/createQuestionPacks'
+        }
+        else {
+            rurl = '/lobby/<%= lobbyID %>';
+        }
         // Check user signed-in
         firebase.auth().onAuthStateChanged(function(user) {
             if (user && !user.isAnonymous) {
@@ -82,7 +89,7 @@
                 var providerData = user.providerData;
 
                 // redirect to lobby
-                window.location.href = '/lobby/<%= lobbyID %>';
+                window.location.href = rurl;
             // ...
             } else {
                 
@@ -105,7 +112,7 @@
                   },
                   // Will use popup for IDP Providers sign-in flow instead of the default, redirect.
                   //signInFlow: 'popup',
-                  signInSuccessUrl: '/lobby/<%= roomID%>',
+                  signInSuccessUrl: rurl,
                   signInOptions: [
                     // Leave the lines as is for the providers you want to offer your users.
                     firebase.auth.GoogleAuthProvider.PROVIDER_ID,
