add image of question

--- a/views/host/gameView.ejs
+++ b/views/host/gameView.ejs
@@ -31,6 +31,11 @@
             <div class="row question">
                 <h1 class="h1" style="color:#000;" id="question"></h1> 
             </div>
+
+            <div class="row question">
+                <img class="questionImage" id="questionImage" alt=""></img> 
+            </div>
+
             <div class="fixed-bottom" style="margin: 20px;">
                 <div class="row">
                     <div class="col-md-6 text-center" style="height:5em;padding: 4px;">
@@ -206,6 +211,7 @@
                     $("#D").html(data.d);
                     $("#questionNumber").html("Question " + questionNumber.toString());
                     $("#question").html(data.question);
+                    $("#questionImage").attr('src', data.imageURL);
                     limit = data.limit;
                     currentTime=0;
                     var p = setInterval(function(){
