Fix player game view

--- a/views/player/gameView.ejs
+++ b/views/player/gameView.ejs
@@ -7,8 +7,8 @@
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-
         <link rel="stylesheet" href="/style/player/gameView.css" />
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
     </head>
     <body>
@@ -27,21 +27,21 @@
               </nav>
             </div>
             <div class="fixed-bottom" style="margin: 20px;">
-                <div class="row">
-                    <div class="col-md-6 text-center" style="height:5em;padding: 4px;">
-                        <button id="A" name="singlebutton" class="btn btn-primary">A</button> 
-                    </div>
-                    <div class="col-md-6 text-center" style="height:5em;padding: 4px;">
-                        <button id="B" name="singlebutton" class="btn btn-primary">B</button> 
-                    </div>
+                <div class="row answers">
+                    <%# <div class="col-md-6 text-center answer"> %>
+                        <button id="A" name="singlebutton" class="btn btn-success ">A</button> 
+                    <%# </div> %>
+                    <%# <div class="col-md-6 text-center answer"> %>
+                        <button id="B" name="singlebutton" class="btn btn-info ">B</button> 
+                    <%# </div> %>
                 </div>
-                <div class="row">
-                    <div class="col-md-6 text-center" style="height:5em;padding: 4px;">
-                        <button id="C" name="singlebutton" class="btn btn-primary">C</button> 
-                    </div>
-                    <div class="col-md-6 text-center" style="height:5em;padding: 4px;">
-                        <button id="D" name="singlebutton" class="btn btn-primary">D</button> 
-                    </div>
+                <div class="row answers">
+                    <%# <div class="col-md-6 text-center answer"> %>
+                        <button id="C" name="singlebutton" class="btn btn-warning ">C</button> 
+                    <%# </div> %>
+                    <%# <div class="col-md-6 text-center answer"> %>
+                        <button id="D" name="singlebutton" class="btn btn-danger ">D</button>
+                    <%# </div> %>
                 </div>
             </div>
             <br>
@@ -53,11 +53,13 @@
             <div class="loader"></div>
         </div>
         
-        <div id="result" style="display:None;">
+        <div class="wobble" id="result" style="display:None;">
             <h1 id="answerStatus"></h1>
+            <h3 id="icon" class="fa fa-check fa-5x"> </h3>
             <h3 id="points"></h3>
             <h3 id="rank"></h3>
         </div>
+
         
         <div id="endgame" style="display:None;">
             <h1>End Game!</h1>
@@ -172,6 +174,17 @@
                     $("#result").show();
                     $("#playing").hide();
                     $("#waiting").hide();
+
+                    if (data.players[player].answerStatus != "correct") {
+                        $("#result").addClass("incorrect");
+                        $("#icon").addClass("fa-times");
+                        $("#icon").removeClass("fa-check");
+                    }
+                    else {
+                        $("#result").removeClass("incorrect");
+                        $("#icon").addClass("fa-check");
+                        $("#icon").removeClass("fa-times");
+                    }
 
                     $("#answerStatus").html(data.players[player].answerStatus);
                     $("#points").html("+" + data.players[player].points + " points");
