--- a/public/style/player/gameView.css
+++ b/public/style/player/gameView.css
@@ -1,3 +1,5 @@
+@import "../animation.css";
+
 .waiting {
     margin-top: 10rem;
 }
@@ -21,6 +23,34 @@ body {
     animation: bgcolor 10s infinite;
     -webkit-animation-direction: alternate;
     animation-direction: alternate;
+}
+
+.answers {
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+    width: 100%;
+    height: 80%;
+}
+
+.answers button {
+    height: 30vh;
+    width: 50%;
+    color: white;
+    font-weight: bolder;
+    font-size: 28pt;
+}
+
+#result {
+    color: white;
+    text-align: center;
+    animation-duration: 0.5s;
+    -webkit-animation-duration: 0.5s;
+}
+
+.incorrect {
+    background: red;
+    height: 100vh;
 }
 
 #title1, #title2{
