--- a/views/player/gameView.ejs
+++ b/views/player/gameView.ejs
@@ -14,7 +14,7 @@
     <body>
         <div id="init">
             <h1 id="title1">You are in!</h1>
-            <h3 id="title2">Waiting for host</h3>
+            <h3 id="title2">See your nickname on screen</h3>
             <div class="loader"></div>
         </div>
 
