--- a/views/host/lobby.ejs
+++ b/views/host/lobby.ejs
@@ -13,7 +13,7 @@
         <button type="button" class="btn btn-success startButton" onclick="startGame()">START GAME</button>
         <ul class="nav justify-content-end">
             <li class="nav-item">
-                <p >Host: <span id="hostname"> hostname </span></p>
+                <p >Host: <span id="hostname"></span></p>
             </li>
             <li class="nav-item">
                 <button type="button" class="btn btn-outline-dark" onclick="signOut()">Sign out</button>
@@ -48,38 +48,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="alert alert-success packList" role="alert">
-                        <div class="card packCard">
-                            <img class="card-img-top" src="/images/no-image-available.jpg" alt="Card image cap">
-                            <div class="card-body">
-                                <h5 class="card-title">Pack title</h5>
-                            </div>
-                        </div>
-                        <div class="card packCard">
-                            <img class="card-img-top" src="/images/no-image-available.jpg" alt="Card image cap">
-                            <div class="card-body">
-                                <h5 class="card-title">Pack title</h5>
-                            </div>
-                        </div>
-                        <div class="card packCard">
-                            <img class="card-img-top" src="/images/no-image-available.jpg" alt="Card image cap">
-                            <div class="card-body">
-                                <h5 class="card-title">Pack title</h5>
-                            </div>
-                        </div>
-                        <div class="card packCard">
-                            <img class="card-img-top" src="/images/no-image-available.jpg" alt="Card image cap">
-                            <div class="card-body">
-                                <h5 class="card-title">Pack title</h5>
-                            </div>
-                        </div>
-                        <div class="card packCard">
-                            <img class="card-img-top" src="/images/no-image-available.jpg" alt="Card image cap">
-                            <div class="card-body">
-                                <h5 class="card-title">Pack title</h5>
-                            </div>
-                        </div>
-                        <div class="card packCard">
+                <div id="questionPacks" class="alert alert-success packList" role="alert">
+                        <div class="card packCard" style="display:None;">
                             <img class="card-img-top" src="/images/no-image-available.jpg" alt="Card image cap">
                             <div class="card-body">
                                 <h5 class="card-title">Pack title</h5>
@@ -127,27 +97,100 @@
     <script src="https://www.gstatic.com/firebasejs/5.9.3/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/5.9.3/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/5.9.4/firebase-database.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/1.7.3/socket.io.js"></script> 
 
     <script src="/javascript/config.js"></script>
     <script>
         var $jq = jQuery.noConflict();
+
+        var socket = io.connect();
+
+        const roomID = "<%= lobbyID%>";
+
+        function checkingValidLobbyOwner(uid){
+            socket.emit('lobby',{
+                state: 0,
+                uid: uid,
+                roomID:roomID
+            });
+        }
+
+        function getQuestionsPackData(uid) {
+            socket.emit('lobby',{
+                state: 1,
+                uid: uid,
+                roomID: roomID
+            });
+        }
+
+        function getPlayers(uid) {
+            socket.emit('lobby',{
+                state: 2,
+                roomID: roomID
+            });
+        }
+
+        function setUpSocket(uid){
+
+            socket.on('connection', function(data){
+                console.log('[] Made a connection: ', data.id);
+            });
+
+            socket.on('disconnect', function(data){
+                console.log('[] Disconnect to server socket: ', data.id);
+            });
+
+            socket.on('lobby',function(data){
+                console.log('[INFO] Receive a socket. State',data.state);
+                console.log('[INFO] Data: ', data)
+                var state =data.state;
+
+                if(roomID == data.roomID){
+                    if(state==1){
+                        // Available Question Packs of that host 
+                        var questionPacks= data.questionPacks;
+                        var parent = $jq("#questionPacks");
+                        var childStr = "";
+                        for (let key in questionPacks) {
+                            childStr += "<div class=\"card packCard\"><img id=\""+key+ "\"class=\"card-img-top\" src=\"/images/"+key+"/"+questionPacks[key].imageURL+"\" alt=\"Card image cap\"><div class=\"card-body\"><h5 class=\"card-title\">"+questionPacks[key].title+"</h5></div></div>";
+                        }
+                        parent.html(childStr);
+                    }else if(state==2){
+                        // get list of user for the first time
+                        var players = data.players; 
+                        var playerList = $jq("#playerList");
+                        let childStr = "";
+                        for (var key in players) {
+                            childStr += "<li class=\"badge badge-success\">" + players[key]['name'] + "</li>";
+                        }
+                        playerList.html(childStr);
+                    }else if(state==3){
+                        // add user
+                        var playerList = $jq("#playerList");
+                        let childStr = playerList.html();
+                        childStr += "<li class=\"badge badge-success\">" + data.name + "</li>";
+                        playerList.html(childStr);
+                    }else if(state==4){
+                        if(data.uid==uid){
+                            window.location.href = '/';
+                        }
+                    }
+                }
+            });
+        }
+
         // Check user signed-in
         firebase.auth().onAuthStateChanged(function(user) {
             if (user && !user.isAnonymous) {
                 // User is signed in.
-                var displayName = user.displayName;
-                var email = user.email;
-                var emailVerified = user.emailVerified;
-                var photoURL = user.photoURL;
-                var isAnonymous = user.isAnonymous;
-                var uid = user.uid;
-                var providerData = user.providerData;
 
-                // console.log('[DEBUG] user info:');
-                // console.log(user);
+                setUpSocket(user.uid);
+                checkingValidLobbyOwner(user.uid);
+                getQuestionsPackData(user.uid);
+                getPlayers(user.uid);
 
                 // change hostname to displayName
-                $jq("#hostname").text(displayName);
+                $jq("#hostname").text(user.displayName);
                 // get new lobby id from Firebase
                 
             // ...
@@ -169,62 +212,15 @@
         }
 
         function back() {
-            // remove lobby
-            var roomID = "<%= lobbyID %>";
-            alert("/Rooms/<%= lobbyID %>/");
-            let user = firebase.auth().currentUser;
-            if (user) {// only if host is this user
-                firebase.database().ref('/Rooms/<%= lobbyID %>/').remove();
-            }
-            else {// not signed-in
-                // back to index
-                window.location.href = "/";
-            }
+            firebase.database().ref('/Rooms/r<%= lobbyID %>').remove();
             setTimeout(() => {
                 window.location.href = "/";
-            }, 1000);
-        }
-
-        function updatePlayersList(players){
-            // alert(JSON.stringify(players));
-            var playerList = $jq("#playerList");
-            let childStr = "";
-            for (var key in players) {
-                // alert(JSON.stringify(player));
-                // console.log('players', players[key]);
-                childStr += "<li class=\"badge badge-success\">" + players[key]['name'] + "</li>";
-            }
-            playerList.html(childStr);
-        }
-
-        function getPlayersData() {
-            $jq.ajax({
-                type: 'GET',
-                url: '/lobbyData/players?roomID=<%= lobbyID %>',
-                dataType: 'json',
-                success: function(data) {
-                    // console.log('data', data);
-                    var playersJSON = data ;//$jq.parseJSON(data);
-                    // // alert(JSON.stringify(playersJSON));
-                    updatePlayersList(playersJSON);
-                },
-                error: function(xhr, ajaxOptions, thrownError) {
-                    // alert(xhr.status);
-                    // alert(thrownError);
-                    // console.log('[ERROR]');
-                }
-            }) // End of AJAX
+            }, 500);
         }
 
         function startGame(){
             window.location.href = '/host/gameView?roomID=<%= lobbyID%>';
         }
-
-        getPlayersData();
-
-        setInterval(function() {
-            getPlayersData();
-        }, 1000);
 
     </script>
 
