--- a/views/login.ejs
+++ b/views/login.ejs
@@ -82,7 +82,7 @@
                 var providerData = user.providerData;
 
                 // redirect to lobby
-                window.location.href = '/lobby/<%= lobbyID %>';
+                window.location.href = '/lobby/<%= lobbyID%>';
             // ...
             } else {
                 
@@ -105,7 +105,7 @@
                   },
                   // Will use popup for IDP Providers sign-in flow instead of the default, redirect.
                   //signInFlow: 'popup',
-                  signInSuccessUrl: '/lobby/<%= roomID%>',
+                  signInSuccessUrl: '/lobby/<%= lobbyID%>',
                   signInOptions: [
                     // Leave the lines as is for the providers you want to offer your users.
                     firebase.auth.GoogleAuthProvider.PROVIDER_ID,
